Added coin setting
